Fix image overflow

--- a/src/app/features/image-editor/components/edit-image/edit-image.component.scss
+++ b/src/app/features/image-editor/components/edit-image/edit-image.component.scss
@@ -5,7 +5,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: min-content 1fr min-content;
+  grid-template-rows: auto 1fr auto;
   grid-template-areas:
     "menu"
     "edit"
@@ -24,12 +24,13 @@
   display: grid;
   height: 100%;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
+  justify-content: center;
   column-gap: 5px;
-  padding: 10px;
 
   .container-image {
     position: relative;
+    display: flex;
+    justify-content: center;
 
     .image-header {
       text-align: center;
@@ -37,18 +38,20 @@
       top: 0;
       left: 0;
       right: 0;
-      margin: 0;
+      margin: 0 auto;
       padding: 10px;
       height: auto;
-      background-color: rgba(20, 20, 20, 0.493);
-      color: $light;
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 23px;
+      color: #e9e9e9;
+      width: fit-content;
     }
   }
 }
 
 .download {
   grid-area: download;
-  background-color: rgb(166, 196, 85);
+  color: $dark;
 }
 
 .btn {
@@ -63,5 +66,6 @@
 }
 
 .img {
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
