--- a/src/app/features/image-editor/pages/image-editor-edit/image-editor-edit.component.scss
+++ b/src/app/features/image-editor/pages/image-editor-edit/image-editor-edit.component.scss
@@ -6,7 +6,6 @@
   background-color: $light;
   color: $light;
   display: grid;
-  grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
     "header"
@@ -19,8 +18,6 @@ app-shared-header {
 }
 
 .edit {
-  background-color: $light;
-  color: $dark;
   grid-area: edit;
 }
 
